--- a/envs/.env
+++ b/envs/.env
@@ -5,5 +5,5 @@ DB_ENGINE=django.db.backends.postgresql
 DB_NAME=schoolify_db
 DB_USER=postgres
 DB_PASSWORD=Bogi1995
-DB_HOST=127.0.0.1
+DB_HOST=127.0.0.1 #to be changed to postgres
 DB_PORT=5432
